Completed most of the refactoring

--- a/GameServer/App.config
+++ b/GameServer/App.config
@@ -9,6 +9,7 @@
   </configSections>
   <connectionStrings>
     <add name="GameServer.Properties.Settings.ExtremeWorld" connectionString="Data Source=119.3.223.39;Initial Catalog=Extremeworld;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
+    <add name="EntitiesDataModelContainer" connectionString="metadata=res://*/EntitiesDataModel.csdl|res://*/EntitiesDataModel.ssdl|res://*/EntitiesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=119.3.223.39;initial catalog=Extremeworld;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
