Fix ModelData connect Sql Server

--- a/GameServer/App.config
+++ b/GameServer/App.config
@@ -8,8 +8,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GameServer.Properties.Settings.ExtremeWorld" connectionString="Data Source=119.3.223.39;Initial Catalog=Extremeworld;Persist Security Info=True;User ID=sa" providerName="System.Data.SqlClient" />
-    <add name="EntitiesDataModelContainer" connectionString="metadata=res://*/EntitiesDataModel.csdl|res://*/EntitiesDataModel.ssdl|res://*/EntitiesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=119.3.223.39;initial catalog=Extremeworld;persist security info=True;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GameServer.Properties.Settings.ITXCM" connectionString="Data Source=119.3.223.39;User ID=sa;Password=Xcm18186365652" providerName="System.Data.SqlClient" />
+    <add name="DataModelContainer" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=119.3.223.39;initial catalog=ITXCM;persist security info=True;user id=sa;password=Xcm18186365652;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
