--- a/GameServer/Properties/Settings.settings
+++ b/GameServer/Properties/Settings.settings
@@ -8,13 +8,13 @@
     <Setting Name="ServerPort" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">8000</Value>
     </Setting>
-    <Setting Name="ExtremeWorld" Type="(Connection string)" Scope="Application">
+    <Setting Name="ITXCM" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=119.3.223.39;Initial Catalog=Extremeworld;Persist Security Info=True;User ID=sa&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=119.3.223.39;User ID=sa;Password=Xcm18186365652&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=119.3.223.39;Initial Catalog=Extremeworld;Persist Security Info=True;User ID=sa</Value>
+      <Value Profile="(Default)">Data Source=119.3.223.39;User ID=sa;Password=Xcm18186365652</Value>
     </Setting>
   </Settings>
 </SettingsFile>
