--- a/ITXCM/ITXCM.csproj
+++ b/ITXCM/ITXCM.csproj
@@ -48,11 +48,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Client\Component\Render\CameraEnvLighting.cs" />
     <Compile Include="Construct\Vector3Int.cs" />
     <Compile Include="Data\DataManager.cs" />
     <Compile Include="Client\MVC\Models\User.cs" />
@@ -72,12 +74,12 @@
     <Compile Include="Network\MessageDistributer.cs" />
     <Compile Include="Network\PackageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Client\Component\NetClient.cs" />
+    <Compile Include="Client\Component\Net\NetClient.cs" />
     <Compile Include="Client\MVC\Services\NetService.cs" />
-    <Compile Include="Client\UnityLogger.cs" />
+    <Compile Include="Client\Tools\UnityLogger.cs" />
     <Compile Include="Utils\Log.cs" />
     <Compile Include="Utils\MathUtil.cs" />
-    <Compile Include="Client\MonoSingleton.cs" />
+    <Compile Include="Client\Tools\MonoSingleton.cs" />
     <Compile Include="Utils\Singleton.cs" />
     <Compile Include="Utils\TimeUtil.cs" />
   </ItemGroup>
